[project]
name = "fastdds"
readme = "README.md"
version = "2.0.0"
requires-python = ">=3.8"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Pieter P", "email" = "pieter.p.dev@outlook.com" }]
keywords = ["dds"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
urls = { "Documentation" = "https://fast-dds.docs.eprosima.com" }
dependencies = []

[build-system]
# Use a pre release, see this issue: https://github.com/tttapa/py-build-cmake/issues/22
# This allows usage of generated = "package" below.
requires = ["py-build-cmake==0.2.0a14", "setuptools"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
generated = "package"

[tool.py-build-cmake.sdist]
include = ["fastdds_python"]

[tool.py-build-cmake.cmake]
minimum_version = "3.22"
source_path = "fastdds_python"
build_type = "Release"

